--- a/charts/consul/Chart.yaml
+++ b/charts/consul/Chart.yaml
@@ -15,7 +15,7 @@ annotations:
     - name: consul
       image: hashicorp/consul:1.13.2
     - name: consul-k8s-control-plane
-      image: hashicorp/consul-k8s-control-plane:1.0.0-dev
+      image: docker.mirror.hashicorp.services/hashicorppreview/consul-k8s-control-plane:1.0.0-dev
     - name: envoy
       image: envoyproxy/envoy:v1.23.1
   artifacthub.io/license: MPL-2.0
