configure -tls-server-name when global.cloud.enabled=true so that it matches the server certificate minted from HCP (#1591)
* release 1.0.0-beta1

* configure -tls-server-name in cloud so that it matches the server certificate minted from HCP

* updating references to consul-tls-server-name to use -tls-server-name

Co-authored-by: Kyle Schochenmaier <kschoche@gmail.com>

--- a/charts/consul/templates/connect-inject-deployment.yaml
+++ b/charts/consul/templates/connect-inject-deployment.yaml
@@ -269,6 +269,9 @@ spec:
                 -default-consul-sidecar-cpu-request={{ $consulSidecarResources.requests.cpu }} \
                 {{- end }}
                 {{- end }}
+                {{- if .Values.global.cloud.enabled }}
+                -tls-server-name=server.{{ .Values.global.datacenter}}.{{ .Values.global.domain}} \
+                {{- end }}
           startupProbe:
             httpGet:
               path: /readyz/ready
