--- a/charts/consul/templates/ingress-gateways-deployment.yaml
+++ b/charts/consul/templates/ingress-gateways-deployment.yaml
@@ -268,7 +268,9 @@ spec:
             -ca-certs=/consul/tls/ca/tls.crt \
             {{- end }}
             {{- if and $root.Values.externalServers.enabled $root.Values.externalServers.tlsServerName }}
-            -tls-server-name={{$root.Values.externalServers.tlsServerName }} \
+            -tls-server-name={{ $root.Values.externalServers.tlsServerName }} \
+            {{- else if $root.Values.global.cloud.enabled }}
+            -tls-server-name=server.{{ $root.Values.global.datacenter}}.{{ $root.Values.global.domain}} \
             {{- end }}
             {{- else }}
             -tls-disabled \
