Update Helm Values (#1551)
* Set server.replicas=1
* Set connectInject.enabled=true
* Set controller.enabled=true

--- a/charts/consul/values.yaml
+++ b/charts/consul/values.yaml
@@ -680,7 +680,7 @@ server:
   # The number of server agents to run. This determines the fault tolerance of
   # the cluster. Please see the deployment table (https://consul.io/docs/internals/consensus#deployment-table)
   # for more information.
-  replicas: 3
+  replicas: 1
 
   # The number of servers that are expected to be running.
   # It defaults to server.replicas.
@@ -1906,7 +1906,7 @@ syncCatalog:
 connectInject:
   # True if you want to enable connect injection. Set to "-" to inherit from
   # global.enabled.
-  enabled: false
+  enabled: true
 
   # The number of deployment replicas.
   replicas: 2
@@ -2323,7 +2323,7 @@ connectInject:
 # ServiceIntentions require consul 1.9+.
 controller:
   # Enables the controller for managing custom resources.
-  enabled: false
+  enabled: true
 
   # The number of deployment replicas.
   replicas: 1
