api-gateway: Allow controller to read MeshService resource (#1574)
* Allow the API gateway controller to read MeshService resource

* Add changelog entry

Co-authored-by: Mike Morris <mikemorris@users.noreply.github.com>

--- a/charts/consul/templates/api-gateway-controller-clusterrole.yaml
+++ b/charts/consul/templates/api-gateway-controller-clusterrole.yaml
@@ -27,6 +27,14 @@ rules:
   verbs:
   - update
 - apiGroups:
+  - api-gateway.consul.hashicorp.com
+  resources:
+  - meshservices
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - apps
   resources:
   - deployments
