set up individual secrets for what used to be HCPConfig secret (#1608)
* set up individual secrets for what used to be HCPConfig secret

* add initial validation for clour config in the helm chart.

* adding bats tests

* add changelog

* changing validateCloudSecretNames to validaterequiredCloudSecretsExist

* PR feedback

* organize consts by name/key

* add conditional checks around hcp config secret saving

* make the self reference in CloudPreset c instead of i

* remove extra line

* noting required vs optional values in helm values file.

--- a/charts/consul/templates/client-daemonset.yaml
+++ b/charts/consul/templates/client-daemonset.yaml
@@ -10,7 +10,8 @@
 {{- if (and .Values.global.enterpriseLicense.secretName (not .Values.global.enterpriseLicense.secretKey)) }}{{fail "enterpriseLicense.secretKey and secretName must both be specified." }}{{ end -}}
 {{- if (and (not .Values.global.enterpriseLicense.secretName) .Values.global.enterpriseLicense.secretKey) }}{{fail "enterpriseLicense.secretKey and secretName must both be specified." }}{{ end -}}
 {{- if and .Values.externalServers.enabled (not .Values.externalServers.hosts) }}{{ fail "externalServers.hosts must be set if externalServers.enabled is true" }}{{ end -}}
-{{ template "consul.validateCloudConfiguration" . }}
+{{ template "consul.validateRequiredCloudSecretsExist" . }}
+{{ template "consul.validateCloudSecretKeys" . }}
 # DaemonSet to run the Consul clients on every node.
 apiVersion: apps/v1
 kind: DaemonSet
