--- a/charts/consul/values.yaml
+++ b/charts/consul/values.yaml
@@ -654,11 +654,65 @@ global:
     # self-managed cluster.
     enabled: false
     
-    # The name of the Kubernetes secret that holds the HCP cloud configuration.
-    # It contains the HCP service principal client_id and client_secret as well
-    # as the HCP resource_id.
-    # @type: string
-    secretName: null
+    # The name of the Kubernetes secret that holds the HCP resource id.
+    # This is required when global.cloud.enabled is true.
+    resourceId:
+      # The name of the Kubernetes secret that holds the resource id.
+      # @type: string
+      secretName: null
+      # The key within the Kubernetes secret that holds the resource id.
+      # @type: string
+      secretKey: null
+
+    # The name of the Kubernetes secret that holds the HCP cloud client id.
+    # This is required when global.cloud.enabled is true.
+    clientId:
+      # The name of the Kubernetes secret that holds the client id.
+      # @type: string
+      secretName: null
+      # The key within the Kubernetes secret that holds the client id.
+      # @type: string
+      secretKey: null
+    
+    # The name of the Kubernetes secret that holds the HCP cloud client secret.
+    # This is required when global.cloud.enabled is true.
+    clientSecret:
+      # The name of the Kubernetes secret that holds the client secret.
+      # @type: string
+      secretName: null
+      # The key within the Kubernetes secret that holds the client secret.
+      # @type: string
+      secretKey: null
+
+    # The name of the Kubernetes secret that holds the HCP cloud client id.
+    # This is optional when global.cloud.enabled is true.
+    apiHost:
+      # The name of the Kubernetes secret that holds the api hostname.
+      # @type: string
+      secretName: null
+      # The key within the Kubernetes secret that holds the api hostname.
+      # @type: string
+      secretKey: null
+
+    # The name of the Kubernetes secret that holds the HCP cloud authorization url.
+    # This is optional when global.cloud.enabled is true.
+    authUrl:
+      # The name of the Kubernetes secret that holds the authorization url.
+      # @type: string
+      secretName: null
+      # The key within the Kubernetes secret that holds the authorization url.
+      # @type: string
+      secretKey: null
+
+    # The name of the Kubernetes secret that holds the HCP cloud scada address.
+    # This is optional when global.cloud.enabled is true.
+    scadaAddress:
+      # The name of the Kubernetes secret that holds the scada address.
+      # @type: string
+      secretName: null
+      # The key within the Kubernetes secret that holds the scada address.
+      # @type: string
+      secretKey: null
 
 # Server, when enabled, configures a server cluster to run. This should
 # be disabled if you plan on connecting to a Consul cluster external to
