Add `tolerations` and `nodeSelector` to Server ACL init jobs and `nodeSelector` to Webhook cert manager (#1581)
* Add tolerations and nodeSelector to server-acl-[init|cleanup] jobs
* Add nodeSelector to webhook cert manager
* Add nodeSelector to webhook-cert-manager-deployment with BATS tests
* Add tolerations and nodeSelector to server-acl-init template with BATS
* Add tolerations and nodeSelector to server-acl-init-cleanup template with BATS
* Fix indent of nodeSelector and tolerations
* Remove job stanza, bringing nodeSelector and tolerations up by one indent level
* Apply suggestions from code review
Co-authored-by: Iryna Shustava <ishustava@users.noreply.github.com>
* Fix indent and files targeted by bats
* Change indent in cleanup job from 12 to 8
Co-authored-by: Iryna Shustava <ishustava@users.noreply.github.com>

--- a/charts/consul/templates/server-acl-init-job.yaml
+++ b/charts/consul/templates/server-acl-init-job.yaml
@@ -336,6 +336,14 @@ spec:
             limits:
               memory: "50Mi"
               cpu: "50m"
+      {{- if .Values.global.acls.tolerations }}
+      tolerations:
+        {{ tpl .Values.global.acls.tolerations . | indent 8 | trim }}
+      {{- end }}
+      {{- if .Values.global.acls.nodeSelector }}
+      nodeSelector:
+        {{ tpl .Values.global.acls.nodeSelector . | indent 8 | trim }}
+      {{- end }}
 {{- end }}
 {{- end }}
 {{- end }}
