Update inaccurate example for API gateway's copyAnnotations (#1631)

--- a/charts/consul/values.yaml
+++ b/charts/consul/values.yaml
@@ -2976,8 +2976,9 @@ apiGateway:
       # Example:
       #
       # ```yaml
-      # service: |
-      # - external-dns.alpha.kubernetes.io/hostname
+      # service:
+      #   annotations: |
+      #   - external-dns.alpha.kubernetes.io/hostname
       # ```
       #
       # @type: string
